--- a/contatos.html
+++ b/contatos.html
@@ -7,20 +7,22 @@
     <title>DNA</title>
 </head>
 <body >
-    <div  style="font-family: Arial, Helvetica, sans-serif; display: flex;
+    <div  style="font-family: Arial, Helvetica, sans-serif;  ">
+
+       <!--  display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center; ">
+    justify-content: center; -->
 
         <img src="https://mydna.blob.core.windows.net/mydna-img-container/mydnalogo.png" style=" width: 100px;
-        margin-top: 20px;">
+        margin-top: 20px; margin-left: 600px;">
 
-        <div style="margin: 20px;">
+        <div style="margin: 20px; margin-left: 550px;">
             <h1>Hola, <span style="color: #8B5CF6;">Saul</span>.</h1>
             <p>¡Tu red de contactos está creciendo!</p>
         </div>
         
-        <div style="margin: 20px;">
+        <div style="margin: 20px; margin-left: 550px;">
         <div style="width: 50px; height: 15px; background-color: #41BAEB; border-radius: 50px;"></div>
         <div style="width: 15px; height: 15px; background-color: #41BAEB; border-radius: 50px; margin-left: 60px; margin-top: -14px;"></div>
         <div style="width: 50px; height: 10px; background-color: transparent; border: 2px solid gainsboro; border-radius: 50px; margin-left: 90px; margin-top: -14px;"></div>
@@ -29,6 +31,7 @@
        </div>
 
         <div style="background-color: #fafafa; padding: 15px; border-radius: 20px;">
+            <div style="margin-left: 500px;">
 
             <div style="width: 70px; height: 70px; background-color: #8B5CF6; border-radius: 50%; margin-left: 10px;"></div>
 
@@ -42,7 +45,7 @@
 
             <button style="background-color: #8B5CF6; color: white; border: white; width: 100px; height: 30px; border-radius: 25px;">Ver Perfil</button>
 
-
+        </div>
         </div>
 
         <div style="text-align: center;">
